# wasm-shim-for-torch

./: .dockerignore  .editorconfig  .env.example  .env.production  .gitattributes  .pre-commit-config.yaml  AUTONOMOUS_EXECUTION_COMPLETION.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_FINAL.md  AUTONOMOUS_SDLC_FINAL_DOCUMENTATION.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_TRANSCENDENCE_COMPLETION.md  AUTONOMOUS_SDLC_V4_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_V5_COMPLETION_REPORT.md  BACKLOG.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  RESEARCH_CONTRIBUTIONS.md  SDLC_ASSESSMENT.md  SECURITY.md  TERRAGON_SDLC_COMPLETION_SUMMARY.md  V5_RESEARCH_CONTRIBUTIONS.md  autonomous_global_deployment_report.json  autonomous_quality_validation_report.json  autonomous_sdlc_deployment_report.json  autonomous_sdlc_validation_results.json  autonomous_v5_deployment_report.json  autonomous_v5_production_simulation_report.json  autonomous_v5_validation_report.json  basic_test_report.json  comprehensive_quality_gates_report.json  (+55 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.terragon/: config.yaml  value-metrics.json
benchmarks/: comprehensive_benchmark.py
benchmarks/python/: benchmark_export.py
deployment/: Dockerfile.production  advanced-monitoring.yaml  autonomous-production-ready.yaml  autonomous-production-transcendent.yaml  autonomous-v5-production.yaml  docker-compose.production.yml  global-deployment.yaml  global-production-deployment.yaml  global-production-manifest.yaml  production.yaml
deployment/config/: production.yaml
deployment/scripts/: entrypoint.sh  health-check.py
docs/: ARCHITECTURE.md  COMPLIANCE.md  DEPLOYMENT.md  DEVELOPMENT.md  GITHUB_ACTIONS_WORKFLOWS.md  MONITORING.md  PERFORMANCE.md  ROADMAP.md  TESTING_STRATEGY.md  WORKFLOWS.md
docs/adr/: 0001-wasm-architecture-choice.md  template.md
examples/: basic_export.py  next_gen_quantum_example.py  planetary_scale_demo.py  simple_model_example.py
monitoring/: alert_rules.yml  prometheus.yml
output/: next_gen_demo_results.json  planetary_scale_demo_results.json  simple_model.wasm
runtime/browser/: wasm-torch-runtime.js
runtime/include/: version.h.in
scripts/: deploy-production.sh  generate-sbom.py  security-scan.sh
security-reports/: security_report_20250812_205926.json
src/wasm_torch/: __init__.py  adaptive_optimization.py  adaptive_security_system.py  advanced_circuit_breaker.py  advanced_error_recovery.py  advanced_ml_pipeline.py  advanced_monitoring_system.py  autonomous_core_engine.py  autonomous_enhancement_engine.py  autonomous_enhancement_v5.py  autonomous_inference_pipeline.py  autonomous_load_balancer.py  autonomous_meta_evolution.py  autonomous_model_optimization.py  autonomous_scaling_system.py  autonomous_sdlc.py  autonomous_sdlc_v4_enhancement.py  autonomous_testing_framework.py  autonomous_transcendent_orchestrator.py  autonomous_validation_engine.py  basic_model_loader.py  cli.py  comprehensive_security_fortress.py  comprehensive_security_system.py  comprehensive_testing.py  comprehensive_validation.py  comprehensive_validation_robust.py  distributed_orchestrator.py  enhanced_inference_engine.py  enterprise_reliability_system.py  enterprise_resilience_framework.py  enterprise_resilience_system.py  enterprise_security.py  error_recovery.py  export.py  global_deployment_orchestrator.py  global_scaling_engine.py  high_performance_inference.py  hyperdimensional_caching.py  hyperdimensional_scaling_engine.py  (+42 more)
src/wasm_torch/hub/: __init__.py  model_registry.py
src/wasm_torch/research/: __init__.py  adaptive_optimizer.py  federated_inference.py  ml_quantizer.py  streaming_pipeline.py
src/wasm_torch/webgpu/: __init__.py  gpu_runtime.py
tests/: __init__.py  conftest.py  test_autonomous_sdlc_integration.py  test_cli.py  test_export.py  test_export_comprehensive.py  test_integration.py  test_optimize.py  test_performance.py  test_research_modules.py  test_runtime.py  test_runtime_comprehensive.py  test_security.py  test_validation.py
